build: Remove ZGC Generational flag, add compact object headers flag to install4j and gradle for free memory savings with Java 25+.